--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,6 +72,116 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae8040e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_quantity = False\n",
+    "        while not valid_quantity:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity < 0:\n",
+    "                    raise ValueError(\"Invalid quantity! Please enter a non-negative value.\")\n",
+    "                valid_quantity = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "        inventory[product] = quantity\n",
+    "    return inventory\n",
+    "\n",
+    "def get_customer_orders(inventory):\n",
+    "    valid_num_orders = False\n",
+    "    while not valid_num_orders:\n",
+    "        try:\n",
+    "            num_orders = int(input(\"Enter the number of customer orders: \"))\n",
+    "            if num_orders < 0:\n",
+    "                raise ValueError(\"Invalid number of orders! Please enter a non-negative value.\")\n",
+    "            valid_num_orders = True\n",
+    "        except ValueError as error:\n",
+    "            print(f\"Error: {error}\")\n",
+    "    \n",
+    "    customer_orders = set()\n",
+    "    while len(customer_orders) < num_orders:\n",
+    "        product = input(\"Enter the name of a product that a customer wants to order: \")\n",
+    "        if product not in inventory or inventory[product] == 0:\n",
+    "            print(\"Error: Invalid product name or out of stock! Please enter a valid product.\")\n",
+    "        else:\n",
+    "            customer_orders.add(product)\n",
+    "    return customer_orders\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    total_price = 0\n",
+    "    for product in customer_orders:\n",
+    "        valid_price = False\n",
+    "        while not valid_price:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price of {product}: \"))\n",
+    "                if price < 0:\n",
+    "                    raise ValueError(\"Invalid price! Please enter a non-negative value.\")\n",
+    "                valid_price = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "        total_price += price\n",
+    "    return total_price\n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    for product in customer_orders:\n",
+    "        inventory[product] -= 1\n",
+    "    inventory = {product: quantity for product, quantity in inventory.items() if quantity > 0}\n",
+    "    return inventory\n",
+    "\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    total_products_ordered, percentage_ordered = order_statistics\n",
+    "    print(\"Order Statistics:\")\n",
+    "    print(f\"Total Products Ordered: {total_products_ordered}\")\n",
+    "    print(f\"Percentage of Unique Products Ordered: {percentage_ordered:.2f}%\")\n",
+    "\n",
+    "def print_updated_inventory(inventory):\n",
+    "    print(\"Updated Inventory:\")\n",
+    "    for product, quantity in inventory.items():\n",
+    "        print(f\"{product.capitalize()}: {quantity}\")\n",
+    "\n",
+    "def print_initial_orders(initial_orders):\n",
+    "    print(\"Products the user initially bought:\")\n",
+    "    for product in initial_orders:\n",
+    "        print(product.capitalize())\n",
+    "\n",
+    "# Main program\n",
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "\n",
+    "inventory = initialize_inventory(products)\n",
+    "\n",
+    "customer_orders = get_customer_orders(inventory)\n",
+    "initial_orders = customer_orders.copy()  # Create a copy of customer_orders to store the initial orders\n",
+    "\n",
+    "print_initial_orders(initial_orders)\n",
+    "\n",
+    "total_price = calculate_total_price(customer_orders)\n",
+    "\n",
+    "total_products_ordered = len(customer_orders)\n",
+    "total_products_available = sum(inventory.values())\n",
+    "percentage_ordered = (total_products_ordered / total_products_available) * 100\n",
+    "\n",
+    "print(\"-------------------------------------------\")\n",
+    "\n",
+    "print_order_statistics((total_products_ordered, percentage_ordered))\n",
+    "\n",
+    "print(\"-------------------------------------------\")\n",
+    "\n",
+    "update_inventory(customer_orders, inventory)\n",
+    "\n",
+    "print_updated_inventory(inventory)\n",
+    "\n",
+    "print(\"-------------------------------------------\")\n",
+    "\n",
+    "print(f\"Total Price: {total_price}\")"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
